2001-08-09 Thursday 17:55  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.32), tests/Makefile.am (1.8), tests/test_thcell.c
	(1.1): Add thcell test suite.

2001-08-09 Thursday 00:57  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.31), include/thai/thcell.h (1.3),
	include/thai/thinp.h (1.8), include/thai/thrend.h (1.7),
	src/thcell/thcell.c (1.3), src/thinp/thinp.c (1.6),
	src/thrend/thrend.c (1.6): Rename struct thcell to struct thcell_t,
	for naming consistency.

2001-08-09 Thursday 00:52  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.30), include/thai/thinp.h (1.7), src/thinp/thinp.c
	(1.5): Change th_validate() to use a cell as context. Define struct
	thinpconv_t for describing input buffer conversion.

2001-08-08 Wednesday 20:58  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.29), include/thai/thcell.h (1.2),
	src/thcell/thcell.c (1.2): Add th_prev_cell().

2001-08-08 Wednesday 19:49  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.28), autogen.sh (1.4), configure.ac (1.1): Add
	result checking in autogen.sh. Add configure.ac for autoconf 2.50+.

2001-08-08 Wednesday 19:39  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.27), configure.in (1.13), include/thai/Makefile.am
	(1.5), include/thai/thcell.h (1.1), include/thai/thrend.h (1.6),
	src/Makefile.am (1.10), src/thcell/.cvsignore (1.1),
	src/thcell/Makefile.am (1.1), src/thcell/thcell.c (1.1),
	src/thrend/thrend.c (1.5): Split thcell functions into a separate
	module.

2001-08-08 Wednesday 11:45  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.26), src/thrend/thrend.c (1.4): Add guards for cells
	without base or hilo char.

2001-08-07 Tuesday 19:43  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.25), src/thinp/thinp.c (1.4): Remove uncommon
	predefined sequence correction.

2001-08-07 Tuesday 19:40  Theppitak Karoonboonyanan  <thep@linux.thai.net>
