@@ -1,5 +1,5 @@
 /*
- * $Id: thcell.c,v 1.3 2001-08-08 17:57:22 thep Exp $
+ * $Id: thcell.c,v 1.4 2001-08-09 11:52:54 thep Exp $
  * thcell_t.c - Thai string cell custering
  * Created: 2001-08-08 (split from thrend.c)
  */
@@ -11,9 +11,8 @@
 
 #define is_composible(c1,c2) (TACio_op(c1,c2)==CP)
 
-const thchar_t *th_next_cell(const thchar_t *s, size_t len,
-                             struct thcell_t *cell, size_t *nchars,
-                             int is_decomp_am)
+size_t th_next_cell(const thchar_t *s, size_t len,
+                    struct thcell_t *cell, int is_decomp_am)
 {
     size_t n = 0;
     cell->base = cell->hilo = cell->top = 0;
@@ -37,13 +36,11 @@ const thchar_t *th_next_cell(const thchar_t *s, size_t len,
             )
         );
     }
-    *nchars = n;
-    return s;
+    return n;
 }
 
 size_t th_prev_cell(const thchar_t *s, size_t pos,
-                    struct thcell_t *cell, size_t *nchars,
-                    int is_decomp_am)
+                    struct thcell_t *cell, int is_decomp_am)
 {
     size_t n = 0;
     cell->base = cell->hilo = cell->top = 0;
@@ -72,24 +69,21 @@ size_t th_prev_cell(const thchar_t *s, size_t pos,
             )
         );
     }
-    *nchars = n;
-    return pos;
+    return n;
 }
 
-const thchar_t *th_make_cells(const thchar_t *s, size_t len,
-                              struct thcell_t cells[], size_t *ncells,
-                              int is_decomp_am)
+size_t th_make_cells(const thchar_t *s, size_t len,
+                     struct thcell_t cells[], size_t *ncells, int is_decomp_am)
 {
     size_t left = *ncells;
+    size_t nchars = 0;
 
     while (len > 0 && left > 0) {
-        size_t nchars = 0;
-
-        s = th_next_cell(s, len, cells, &nchars, is_decomp_am);
-        len -= nchars;
+        size_t n = th_next_cell(s + nchars, len, cells, is_decomp_am);
+        nchars += n; len -= n;
         ++cells; --left;
     }
     *ncells -= left;
-    return s;
+    return nchars;
 }
 
