@@ -1,3 +1,8 @@
+2001-08-09 Thursday 18:13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* ChangeLog (1.33), tests/test_thcell.c (1.2): Add
+	test_th_make_cells().
+
 2001-08-09 Thursday 17:55  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* ChangeLog (1.32), tests/Makefile.am (1.8), tests/test_thcell.c
@@ -467,13 +472,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am (1.2),
 	src/thcoll/Makefile.am (1.2, r0_1_0), tests/Makefile.am (1.2): Add
-	$Id: ChangeLog,v 1.33 2001-08-09 11:13:03 thep Exp $
+	$Id: ChangeLog,v 1.34 2001-08-09 11:52:54 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_0), tests/thsort.c (1.2, r0_1_0): Add $Id: ChangeLog,v 1.33 2001-08-09 11:13:03 thep Exp $
+	r0_1_0), tests/thsort.c (1.2, r0_1_0): Add $Id: ChangeLog,v 1.34 2001-08-09 11:52:54 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
